--- a/style.css
+++ b/style.css
@@ -1,54 +1,58 @@
-
-
 /* .heroimg{
     background-image: url(IV8-02.jpg);
     background-size: cover;
     
 }  */
-.heroimg2{
+.heroimg2 {
     background-image: url(B3_工作區域\ 1.jpg);
     background-size: cover;
     color: aliceblue;
     letter-spacing: 5px;
 }
-.word{
-    background-image: url(black.jpg);
+
+.word {
+    background-image: url(black_工作區域\ 1.jpg);
     padding-top: 20%;
     /* background-color: #2c2d2d; */
     color: aliceblue;
     width: 100%;
     height: 800px;
 }
- .container1{
+
+.container1 {
     /* background-color: #2c2d2d; */
     padding-top: 10%;
     width: 90%;
     margin: 50px auto 0;
-}  
-.container3{
+}
+
+.container3 {
     padding-top: 20%;
 }
-.container4{
+
+.container4 {
     padding-top: 10%;
 }
 
-.container5-fluid{    
+.container5-fluid {
     /* background-color: #2c2d2d;
     width: 100%;
     height: 80px; */
     color: #ffffff;
     /* align-content:center */
-   
+
 }
 
 .text-mary {
     color: aliceblue;
 }
+
 .btn-mary {
     background-color: aqua;
     color: aliceblue;
 }
-.btn-mary:hover{
+
+.btn-mary:hover {
     background-color: aqua;
     color: aliceblue;
 }
