--- a/style2.css
+++ b/style2.css
@@ -1,27 +1,58 @@
-.bg {
-    background-color: #000000;
-    margin: 0;
+/* .heroimg{
+    background-image: url(IV8-02.jpg);
+    background-size: cover;
+    
+}  */
+.heroimg2 {
+    background-image: url(B3_工作區域\ 1.jpg);
+    background-size: cover;
+    color: aliceblue;
+    letter-spacing: 5px;
 }
-.button1 {
-    transform: translate(50px, 30px);
+
+.word {
+    background-image: url(black_工作區域\ 1.jpg);
+    padding-top: 20%;
+    /* background-color: #2c2d2d; */
+    color: aliceblue;
+    width: 100%;
+    height: 800px;
 }
-.button2 {
-    transform: translate(150px, 20px);
+
+.container1 {
+    /* background-color: #2c2d2d; */
+    padding-top: 10%;
+    width: 90%;
+    margin: 50px auto 0;
 }
-.enter button {
-    transform: translate(150px, 60px)
+
+.container3 {
+    padding-top: 20%;
+}
+
+.container4 {
+    padding-top: 10%;
+}
+
+.container5-fluid {
+    /* background-color: #2c2d2d;
+    width: 100%;
+    height: 80px; */
+    color: #ffffff;
+    /* align-content:center */
 
 }
-.button3 {
-    transform: translate(420px, 60px)
 
+.text-mary {
+    color: aliceblue;
 }
-.button4 {
-    transform: translate(750px, 60px)
+
+.btn-mary {
+    background-color: aqua;
+    color: aliceblue;
 }
-.button5 {
-    transform: translate(1050px, 10px)
-}
-.button6 {
-    transform: translate(50px, 5px)
+
+.btn-mary:hover {
+    background-color: aqua;
+    color: aliceblue;
 }
