--- a/style2.css
+++ b/style2.css
@@ -3,27 +3,64 @@
     background-size: cover;
     
 }  */
-.heroimg2 {
-    background-image: url(B3_工作區域\ 1.jpg);
-    background-size: cover;
-    color: aliceblue;
-    letter-spacing: 5px;
-}
 
-.word {
-    background-image: url(black_工作區域\ 1.jpg);
-    padding-top: 20%;
-    /* background-color: #2c2d2d; */
-    color: aliceblue;
-    width: 100%;
-    height: 800px;
+.btn-menu {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    /* 滑鼠游標變點擊手 */
+    
 }
+.btn-menu div {
+    transform: translate(-1vw, 2vh);
+    width: 30px;
+    height: 2px;
+    /* border-radius:6px */
+    background-color: rgb(250, 250, 250);
+    margin-bottom:8px;
+    transition: all .5s;
+}
+.btn-menu.active div:nth-child(2) {
+   opacity: 0;
+}
+.btn-menu.active div:first-child {
+    transform: translateY(10px) rotate(45deg);
+ }
+ /* translateY=margin bottom+height */
+ .btn-menu.active div:last-child {
+    transform: translateY(-10px) rotate(-45deg);
+ }
+
+ .menu {
+    
+    position: fixed;
+    right: -240px;
+    top: 0;
+    width: 200px;
+    height: 100vh;
+    color: #ffffff;
+    background-color: #343a409d;
+    padding: 20px;
+    transition: all .5s;
+ }
+ .menu.active {
+    right: 0;
+ }
+ 
+
+/* 內容 */
+
+.words {
+    transform: translate(3vw, -65vh);
+    padding-top: 10%;
+   
+} 
 
 .container1 {
     /* background-color: #2c2d2d; */
     padding-top: 10%;
     width: 90%;
-    margin: 50px auto 0;
+    margin: 70px auto 0;
 }
 
 .container3 {
@@ -34,7 +71,7 @@
     padding-top: 10%;
 }
 
-.container5-fluid {
+.container5 {
     /* background-color: #2c2d2d;
     width: 100%;
     height: 80px; */
